objects/Campaign_Location__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Geography By Service Area</relationshipLabel>
        <relationshipName>Campaign_Location</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ExternalIdLoc__c</fullName>
        <externalId>true</externalId>
        <label>ExternalIdLoc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital__c</fullName>
        <formula>Location__r.Hospital__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hospital</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Campaign Location</relationshipLabel>
        <relationshipName>Campaign_Location</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>Location__r.Market__c</formula>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Location__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Area__c</fullName>
        <formula>Location__r.Service_Area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <formula>Location__r.Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <label>Campaign Location Information</label>
    <nameField>
        <displayFormat>CL-{000000}</displayFormat>
        <label>Campaign Location No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Geography</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>